final edits push

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -152,8 +152,8 @@ margin:5%;
         font-size: 2rem;
         margin-left:15%;
         text-align: center;
-        padding:3%;
-        margin-top: 3%;
+        //padding:3%;
+        margin-bottom: 3%;
 
         
         @media @tablet{
@@ -239,6 +239,12 @@ margin:5%;
         font-size: @text-size;
         font-family: @text-font;
 
+        .source{
+            font-size: 2rem;
+            text-align: center;
+    
+        }
+
         @media @tablet{
             padding:0;
             line-height: normal;
@@ -314,6 +320,7 @@ text-align: center;
 li{
     text-decoration: none;
     margin-left:5%;
+    list-style-type: circle;
 }
 
 }//list end
