--- a/css/index.css
+++ b/css/index.css
@@ -217,6 +217,7 @@ h5 {
   font-size: 3rem;
   font-family: 'Baloo Bhaijaan';
   color: #252A33;
+  margin-top: 3%;
 }
 @media (max-width: 500px) and (min-width: 0px) {
   h5 {
@@ -436,8 +437,7 @@ nav a {
   font-size: 2rem;
   margin-left: 15%;
   text-align: center;
-  padding: 3%;
-  margin-top: 3%;
+  margin-bottom: 3%;
 }
 @media (max-width: 800px) and (min-width: 501px) {
   .video .video-text {
@@ -519,6 +519,10 @@ nav a {
   font-size: 3rem;
   font-family: 'Athiti', sans-serif;
 }
+.body .body-text .source {
+  font-size: 2rem;
+  text-align: center;
+}
 @media (max-width: 800px) and (min-width: 501px) {
   .body .body-text {
     padding: 0;
@@ -596,6 +600,7 @@ nav a {
 .help ul li {
   text-decoration: none;
   margin-left: 5%;
+  list-style-type: circle;
 }
 .help .team-link {
   width: 100%;
@@ -678,7 +683,7 @@ nav a {
 }
 .jasmine .jasmine-content p {
   color: #252A33;
-  font-size: 4rem;
+  font-size: 3rem;
 }
 .jasmine .jasmine-content h3 {
   margin: 5%;
@@ -686,7 +691,7 @@ nav a {
 .jasmine .jasmine-content p {
   margin: 3%;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width: 800px) and (min-width: 501px) {
   .jasmine .jasmine-content p {
     font-size: 3rem;
   }
@@ -726,7 +731,7 @@ nav a {
 }
 .bao .bao-content p {
   color: #252A33;
-  font-size: 4rem;
+  font-size: 3rem;
 }
 .bao .bao-content h3 {
   margin: 5%;
@@ -734,7 +739,7 @@ nav a {
 .bao .bao-content p {
   margin: 3%;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width: 800px) and (min-width: 501px) {
   .bao .bao-content p {
     font-size: 3rem;
   }
@@ -774,7 +779,7 @@ nav a {
 }
 .heather .heather-content p {
   color: #252A33;
-  font-size: 4rem;
+  font-size: 3rem;
 }
 .heather .heather-content h3 {
   margin: 5%;
@@ -782,7 +787,7 @@ nav a {
 .heather .heather-content p {
   margin: 3%;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width: 800px) and (min-width: 501px) {
   .heather .heather-content p {
     font-size: 3rem;
   }
@@ -822,7 +827,7 @@ nav a {
 }
 .kerri-ann .kerri-ann-content p {
   color: #252A33;
-  font-size: 4rem;
+  font-size: 3rem;
 }
 .kerri-ann .kerri-ann-content h3 {
   margin: 5%;
@@ -830,7 +835,7 @@ nav a {
 .kerri-ann .kerri-ann-content p {
   margin: 3%;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width: 800px) and (min-width: 501px) {
   .kerri-ann .kerri-ann-content p {
     font-size: 3rem;
   }
@@ -856,11 +861,6 @@ nav a {
 }
 @media (max-width: 500px) and (min-width: 0px) {
   .brian {
-    font-size: 3rem;
-  }
-}
-@media (max-width: 500px) and (min-width: 0px) {
-  .brian {
     width: 100%;
   }
 }
@@ -875,13 +875,18 @@ nav a {
 }
 .brian .brian-content p {
   color: #252A33;
-  font-size: 4rem;
+  font-size: 3rem;
 }
 .brian .brian-content h3 {
   margin: 5%;
 }
 .brian .brian-content p {
   margin: 3%;
+}
+@media (max-width: 800px) and (min-width: 501px) {
+  .brian .brian-content p {
+    font-size: 3rem;
+  }
 }
 @media (max-width: 500px) and (min-width: 0px) {
   .brian .brian-content p {
@@ -900,7 +905,7 @@ nav a {
 }
 .team-content p {
   color: #252A33;
-  font-size: 4rem;
+  font-size: 3rem;
 }
 @media (max-width: 500px) and (min-width: 0px) {
   .team-foot {
@@ -908,7 +913,9 @@ nav a {
   }
 }
 .buttons {
-  border: 2px solid green;
+  margin: 1%;
+  display: flex;
+  justify-content: space-evenly;
 }
 footer {
   display: flex;
