--- a/less/global.less
+++ b/less/global.less
@@ -68,6 +68,7 @@ h4{
     font-family: 'Kavivanar', cursive;
     color: @titles-color;
       font-size:@titles-size;
+      
 
       @media @mobile{
         font-size: 4rem;
@@ -79,6 +80,7 @@ h5{
     font-size: 3rem;
     font-family: 'Baloo Bhaijaan';
     color: @team-color;
+    margin-top:3%;
 
     @media @mobile{
         font-size:2rem;
