--- a/less/team-page.less
+++ b/less/team-page.less
@@ -63,7 +63,7 @@
             
          margin:3%;
 
-         @media @mobile{
+         @media @tablet{
             font-size: 3rem;
         } //jasmine tablet p end
 
@@ -108,7 +108,7 @@
             
          margin:3%;
 
-         @media @mobile{
+         @media @tablet{
             font-size: 3rem;
         } //bao tablet p end
 
@@ -153,7 +153,7 @@
         p{
              margin:3%;
 
-            @media @mobile{
+            @media @tablet{
                 font-size: 3rem;
             } //heather tablet p end
 
@@ -197,7 +197,7 @@
         p{
             margin:3%;
 
-            @media @mobile{
+            @media @tablet{
                 font-size: 3rem;
             } //kerri-ann tablet p end
 
@@ -222,9 +222,7 @@
     font-family: @team-font;
 
 
-    @media @mobile{
-        font-size: 3rem;
-    } //brian tablet p end
+   
 
     @media @mobile{
         width:100%;
@@ -244,6 +242,10 @@
         p{
             
             margin:3%;
+
+            @media @tablet{
+                font-size: 3rem;
+            } //brian tablet p end
 
             @media @mobile{
                 font-size: 2rem;
@@ -292,6 +294,7 @@ p {
 }//team foot end
 
 .buttons{
-    border:2px solid green;
-
+    margin:1%;
+    display:flex;
+    justify-content: space-evenly;
 }
